# API_sending_reminders_in_telegram

./: .env.example  README.md  db.json  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
habit/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/migrations/: 0001_initial.py  0002_alter_habit_action_alter_habit_location_and_more.py  0002_initial.py  0003_alter_habit_author_alter_habit_nice_habit_and_more.py  0004_alter_habit_time.py  0005_alter_habit_time.py  0006_alter_habit_periodicity.py  0007_alter_habit_periodicity.py
users/: admin.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
